@@ -66,6 +66,7 @@ Release 0.9.10
 - add initial(partial) support using MySQL fulltext to ZMProductFinder; enable
 	via ZMSettings::set('apps.store.search.fulltext', true);
 - add ZMPhpSourceAnalyzer plus tests
+- add default order by relevance when using fulltext search
 
 Release 0.9.9
 - in ZMDbTableMapper handle database exception building auto mappings
